// ログインボーナスマスター取得リクエスト
syntax = "proto3";

package proto;

option go_package = "api/game/presentation/server/loginBonus";

message LoginBonusGetMasterRequest {
  string user_id = 1;
  int64 master_login_bonus_id = 2;
}
