// ログインボーナスマスター取得レスポンス
syntax = "proto3";

package proto;

option go_package = "api/game/presentation/server/loginBonus";

import "master_login_bonus_structure.proto";
import "master_login_bonus_event_structure.proto";
import "master_login_bonus_item_structure.proto";
import "master_login_bonus_schedule_structure.proto";

message LoginBonusGetMasterResponse {
  optional MasterLoginBonus master_login_bonus = 1;
  optional MasterLoginBonusEvent master_login_bonus_event = 2;
  repeated MasterLoginBonusItem master_login_bonus_items = 3;
  repeated MasterLoginBonusSchedule master_login_bonus_schedules = 4;
}
