// ログインボーナス
syntax = "proto3";

package proto;

option go_package = "api/game/presentation/server/loginBonus";

message MasterLoginBonus {
  int64 id = 1;
  int64 master_login_bonus_event_id = 2;
  string name = 3;
}
